--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "node-js-sample",
-  "version": "0.2.0",
-  "description": "A sample Node.js app using Express 4",
-  "main": "index.js",
+  "name": "messenger-get-started",
+  "version": "1.0.0",
+  "description": "Get started example for Messenger Platform",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js"
-  },
-  "dependencies": {
-    "express": "^4.13.4"
-  },
-  "engines": {
-    "node": "4.0.0"
+    "start": "node app.js",
+    "lint": "jshint --exclude-path=.gitignore .",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/csvignesh/sellbot"
   },
-  "author": "vics",
-  "contributors": [
-    "vics<vigneshcs.1988@gmail.com>"
-  ],
-  "license": "MIT"
+  "author": "Facebook",
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.15.0",
+    "config": "^1.20.4",
+    "express": "^4.13.4",
+    "request": "^2.72.0"
+  },
+  "engines": {
+    "node": "~4.1.2"
+  }
 }
