--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "messenger-get-started",
   "version": "1.0.0",
   "description": "Get started example for Messenger Platform",
-  "main": "app.js",
+  "main": "messenger.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node messenger.js",
     "lint": "jshint --exclude-path=.gitignore .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,7 +18,9 @@
     "body-parser": "^1.15.0",
     "config": "^1.20.4",
     "express": "^4.13.4",
-    "request": "^2.72.0"
+    "request": "^2.72.0",
+    "node-fetch": "^1.5.1",
+    "node-uuid": "^1.4.7"
   },
   "engines": {
     "node": "~4.1.2"
