--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "express": "^4.13.4",
     "request": "^2.72.0",
     "node-fetch": "^1.5.1",
-    "node-uuid": "^1.4.7",
-    "trivial-multipart": "latest"
+    "node-uuid": "^1.4.7"
   },
   "engines": {
     "node": "~4.1.2"
