--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^4.13.4",
     "request": "^2.72.0",
     "node-fetch": "^1.5.1",
-    "node-uuid": "^1.4.7"
+    "node-uuid": "^1.4.7",
+    "netpbm" : "latest"
   },
   "engines": {
     "node": "~4.1.2"
